--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -6,6 +6,7 @@
     height: 100vh;
     width: 100vw;
     padding: 4vh 3vw;
+    overflow: hidden;
 
 
     .background {
